--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
     <div class="row profile-photo">
         <div class="col-lg-6 col-sm-6">
-            <img class="main-img" src="https://github.com/patrick-aguiar/Artistics-Styles/blob/master/img/patrick-photo.jpg" alt="iphone-mockup">
+            <img class="main-img" src="https://raw.githubusercontent.com/patrick-aguiar/Artistics-Styles/master/img/patrick-photo.jpg" alt="iphone-mockup">
         </div>
         <div class="col-lg-6 col-sm-6">
-            <img class="main-img" src="https://github.com/patrick-aguiar/Artistics-Styles/blob/master/img/jennings-photo.jpg" alt="iphone-mockup">
+            <img class="main-img" src="https://raw.githubusercontent.com/patrick-aguiar/Artistics-Styles/master/img/jennings-photo.jpg" alt="iphone-mockup">
         </div>
     </div>
 
@@ -125,10 +125,10 @@
         <div id="testimonials-carousel" class="carousel slide" data-ride="false">
             <div class="carousel-inner container">
                 <div class="carousel-item active">
-                    <img src="https://github.com/patrick-aguiar/Artistics-Styles/blob/master/img/backsplash01.jpg " class="carousel-image">
+                    <img src="https://raw.githubusercontent.com/patrick-aguiar/Artistics-Styles/master/img/backsplash01.jpg " class="carousel-image">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://github.com/patrick-aguiar/Artistics-Styles/blob/master/img/brick-joins-02.jpg" class="carousel-image">
+                    <img src="https://raw.githubusercontent.com/patrick-aguiar/Artistics-Styles/master/img/brick-joins-02.jpg" class="carousel-image">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#testimonials-carousel" role="button" data-slide="prev">
@@ -147,9 +147,9 @@
     <!-- Press -->
     
     <section id="press">
-        <img class="press-logo" src="https://github.com/patrick-aguiar/Artistics-Styles/blob/master/img/mapei-logo.png" alt="tc-logo">
-        <img class="press-logo" src="https://github.com/patrick-aguiar/Artistics-Styles/blob/master/img/schluter-logo.png" alt="tnw-logo">
-        <img class="press-logo" src="https://github.com/patrick-aguiar/Artistics-Styles/blob/master/img/sigma-logo.jpg" alt="biz-insider-logo">
+        <img class="press-logo" src="https://raw.githubusercontent.com/patrick-aguiar/Artistics-Styles/master/img/mapei-logo.png" alt="tc-logo">
+        <img class="press-logo" src="https://raw.githubusercontent.com/patrick-aguiar/Artistics-Styles/master/img/schluter-logo.png" alt="tnw-logo">
+        <img class="press-logo" src="https://raw.githubusercontent.com/patrick-aguiar/Artistics-Styles/master/img/sigma-logo.jpg" alt="biz-insider-logo">
     </section>
 
     <!-- Call to Action -->
