--- a/index.html
+++ b/index.html
@@ -43,16 +43,10 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Home</a>
+                                    <a class="nav-link" href="#testimonials">Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Projects</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">Our Gallery</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">Contact</a>
+                                    <a class="nav-link" href="#footer">Contact</a>
                                 </li>
                             </ul>
             
