--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- Title -->
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
-                    <h1 class="big-heading">Some text just as an exemplo for this motherfucker</h1>
+                    <h1 class="big-heading">Some simple text as exemple</h1>
                 </div>
             </div>
         </div>
